//<框出特殊的结构 待处理>
//other.A
//time.Time
//<前面的是特殊的结构>




message BannerInput {
  google.protobuf.Int64Value id = 2;
  repeated google.protobuf.Int64Value idarr = 3;
  map<string,google.protobuf.Int64Value> idmap = 4;
  map<string,repeated google.protobuf.Int64Value> idmap_arr = 5;
  google.protobuf.StringValue policy = 6;
  repeated google.protobuf.StringValue policy_arr = 7;
  map<int,google.protobuf.StringValue> policy_map = 8;
  other.A person = 9;
  repeated other.A persons = 10;
  repeated other.A persons_ptr = 11;
  map<int,other.A> person_map = 12;
  map<int,interface{}> person_map_int = 13;
}

message Email {
  string id = 2;
  bool priority = 3;
  string content = 4;
  time.Time send_time = 5;
  time.Time valid_time = 6;
  string extra_data = 7;
}

message EmailRecord {
  string id = 2;
  string sender_id = 3;
  string receive_id = 4;
  string game_id = 5;
  string status = 6;
  string extra_data = 7;
}

message EmailLike {
  string id = 2;
  string liker_player = 3;
  string liked_player = 4;
}

